0.12 (unreleased)
=================


0.11 (2011-07-18)
=================

 - Sort top_level metadata to avoid error building omelette if they are out of
   order.  Fixes https://bugs.launchpad.net/collective.buildout/+bug/553005.
   Thanks to Leonardo Rochael Almeida.
   [davisagli]

0.10 (2010-11-22)
=================

 - Provide an update function (equivalent to install) to avoid spurious "recipe
   "doesn't define an update method" warning.
   [davisagli]

 - Print a warning rather than aborting the buildout if junction.exe is missing
   on Windows.
   [davisagli]

 - Made the tests compatible with a zc.buildout installed with Distribute rather
   than Setuptools.
   [pumazi]

 - Handle OSErrors on symlink and warn the user. MacOSX can raise OSError due to
   an existing file here even if os.path.exists returns False.
   [MatthewWilkes]

 - Include modules from namespace packages in the omelette. (Namespace packages
   cannot define anything in __init__.py, but they can contain modules.)
   [hathawsh]

 - Made the tests compatible with virtualenv.
   [hathawsh]

0.9 (2009-04-11)
================

 - Adjusted log-levels to be slightly less verbose for non-critical
   errors. [malthe]

0.8 (2009-01-14)
================

 - Fixed 'OSError [Errno 20] Not a directory' on zipped eggs, for
   example when adding the z3c.sqlalchemy==1.3.5 egg.
   [maurits]

0.7 (2008-09-10)
================

 - Actually add namespace declarations to generated __init__.py files.
   [davisagli]

 - Use egg-info instead of guessing paths from package name. This also fixes
   eggs which have a name different from the contents.
   [fschulze]


0.6 (2008-08-11)
================

 - Documentation changes only.
   [davisagli]


0.5 (2008-05-29)
================

 - Added uninstall entry point so that the omelette can be uninstalled on Windows without
   clobbering things outside the omelette path.
   [optilude]
