@@ -8,3 +8,4 @@
  - Michael Mulich [pumazi]
  - Shane Hathaway [hathawsh]
  - Leonardo Rochael Almeida [LeoRochael]
+ - Tom Gross [tom_gross]
